[tool.poetry]
name = "roseknowsbest"
version = "0.1.0"
description = "Python package for distribution and release management of the roseknowsbest.com Django site."
authors = ["Michael Rose <michaelrose126@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
psycopg2-binary = "^2.8"
docutils = "^0.14.0"
Pillow = "^6.1"

[tool.poetry.dev-dependencies]
robotframework = "^3.1"
pytest = "^5.0"

[tool.poetry.scripts]
my-script = "my_module:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
